--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,13 +1,17 @@
 h1{
-    font-size: 4rem;
+    font-size: 3.5rem;
     color: #88BBD6;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-bottom: 2vh;
+    margin-bottom: 2.5vh;
 }
 
 h2{
     color: #24305E;
-    font-size: 3rem;
+    font-size: 1.9rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 200;
+    padding-bottom: 1.5vh;
 }
 
 h3{
