--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,22 +5,44 @@
 	font-family: open-sans, sans-serif;
 	font-weight: 300;
 	font-style: normal;
-    position: fixed;
+    position: relative;
     align-items:baseline;
     width: fit-content;
+    
+}
 
+.nav-item{
+	color: #24305E;
+
+	font-size: 1.5rem;
+	font-family: open-sans, sans-serif;
+	font-weight: 300;
+	font-style: normal;
+
+    position: relative;
+    align-items:baseline;
+    width: fit-content;
+    padding-right: 2vw;
+    
 }
 
 .navbar-brand{
     background-color: white;
     color: #88BBD6;
-    font-size: 3rem;
+    font-size: 3.4rem;
+    font-weight: 500;
     position: relative;
     align-items: baseline;
+    padding-right: 1vw;
 }
 
-.navbar:hover{
-    color: black;
+
+.nav-item:hover{
+    color: #24305E;
+}
+
+.navbar-brand:hover{
+    color: #88BBD6;
 }
 
 .header-background{
