--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -16,7 +16,14 @@ h2{
 
 h3{
     color: #CDCDCD;
-    font-size: 5rem;
+    font-size: 3.5rem;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h4{
+    color: #24305E;
+    font-size: 1.9rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 200;
 }
 
