--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,29 +1,68 @@
 h1{
     font-size: 3.5rem;
     color: #88BBD6;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Cabin', sans-serif;
     padding-bottom: 2vh;
     margin-bottom: 2.5vh;
+    font-weight: 500;
 }
 
 h2{
     color: #24305E;
     font-size: 1.9rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: 200;
     padding-bottom: 1.5vh;
 }
 
 h3{
     color: #CDCDCD;
-    font-size: 3.5rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 3rem;
+    font-family: 'Cabin', sans-serif;
 }
 
 h4{
     color: #24305E;
     font-size: 1.9rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Raleway', sans-serif;    
     font-weight: 200;
 }
 
+h5{
+    color: #68A0BD;
+    font-size: 1.9rem;
+    font-family: 'Raleway', sans-serif;  
+    font-weight: 200;
+      
+}
+
+h5 a{
+    text-decoration: none;
+    position: relative;
+    display: inline-flex;
+}
+
+
+h5 a.underline:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    height: 1em;
+    width: 100%;
+    border-bottom: 1px solid;
+    margin-top: 10px;
+    opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0,1);
+	transform: scale(0,1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+h5 a.underline:hover:after{
+    opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+} 
