--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -14,4 +14,15 @@
   margin-bottom: 2vh;
   height: 18rem;
   border-radius: 10%;
+  object-fit: cover;
+  overflow: hidden;
   }
+
+.locations{
+  height: 40vh;
+  width: 41vw;
+  margin-bottom: 2vh;
+  border-radius: 20px;
+  object-fit: cover;
+  overflow: hidden;
+}
