--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -9,7 +9,7 @@ h1{
 
 h2{
     color: #24305E;
-    font-size: 1.9rem;
+    font-size: 1.7rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 200;
     padding-bottom: 1.5vh;
@@ -17,20 +17,20 @@ h2{
 
 h3{
     color: #CDCDCD;
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-family: 'Cabin', sans-serif;
 }
 
 h4{
     color: #24305E;
-    font-size: 1.9rem;
+    font-size: 1.7rem;
     font-family: 'Raleway', sans-serif;    
     font-weight: 200;
 }
 
 h5{
     color: #68A0BD;
-    font-size: 1.9rem;
+    font-size: 1.7rem;
     font-family: 'Raleway', sans-serif;  
     font-weight: 200;
       
@@ -66,3 +66,7 @@ h5 a.underline:hover:after{
 	-webkit-transform: scale(1);
 	transform: scale(1);
 } 
+
+.bold{
+    font-weight: bold;
+}
