--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -17,7 +17,7 @@ h2{
 
 h3{
     color: #CDCDCD;
-    font-size: 3.5rem;
+    font-size: 3rem;
     font-family: 'Cabin', sans-serif;
 }
 
@@ -70,3 +70,24 @@ h5 a.underline:hover:after{
 .bold{
     font-weight: bold;
 }
+
+/**Quote Font**/
+
+h6 {
+    color: #24305E;
+    font-size: 1.4rem;
+    font-family: 'Raleway', sans-serif;    
+    font-style: italic;
+    line-height: 1.5;
+}
+
+/**Quote Signature Font**/
+
+h7 {
+    color: #24305E;
+    font-size: 1.4rem;
+    font-family: 'Raleway', sans-serif;    
+    line-height: 1.5;
+    padding-left: 15vh;
+}
+
