--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -91,3 +91,46 @@ h7 {
     padding-left: 15vh;
 }
 
+
+@media only screen and (max-width: 600px) {
+	h1 {
+		font-size: 3rem
+	}
+	h2 {
+		font-size: 1.2rem
+	}
+	h3 {
+		font-size: 1.2rem
+    }
+    h4 {
+        font-size: 3rem;
+    }
+    h5 {
+        font-size: 1.2rem;
+    }
+    h6 {
+        font-size: 2rem;
+    }
+}
+
+
+@media only screen and (min-width: 600px) and (max-width: 992px) {
+    h1 {
+        font-size: 3.2rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+		font-size: 1.2rem
+    }
+    h4 {
+        font-size: 3rem;
+    }
+    h5 {
+        font-size: 1.2rem;
+    }
+    h6 {
+        font-size: 2rem;
+    }
+}
