--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,4 @@
-.navbar{
+ .navbar{
 	background-color: white;
 	color: #24305E;
 	font-size: 1.5rem;
@@ -7,9 +7,8 @@
 	font-style: normal;
     position: relative;
     align-items:baseline;
-    width: fit-content;
     
-}
+} 
 
 .nav-item{
 	color: #24305E;
@@ -26,7 +25,7 @@
 
 .navbar-brand{
     background-color: white;
-    color: #88BBD6;
+    color: #88BBD6 !important;
     font-size: 3.4rem;
     font-weight: 500;
     position: relative;
@@ -164,4 +163,10 @@
   
   input.check-toggle-round-flat:checked + label:after {
     margin-left: 44px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .navbar-brand {
+      font-size: 2.2rem
+    }
   }
