--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -167,6 +167,21 @@
 
   @media only screen and (max-width: 600px) {
     .navbar-brand {
-      font-size: 2.2rem
+      font-size: 1.5rem;
+    }
+
+    .nav-item {
+      font-size: 1rem;
+    }
+  }
+
+  
+ @media only screen and (min-width: 600px) and (max-width: 992px) {
+    .navbar-brand {
+      font-size: 2rem;
+    }
+
+    .nav-item {
+      font-size: 1.2rem;
     }
   }
