WIP - Adding additional About You section

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -12,6 +12,12 @@
     margin-bottom: 2vh;
 }
 
+.headshot-2{
+    border: solid #24305E;
+    border-radius: 1vw;
+    margin-bottom: 2vh;
+}
+
 .padding-center{
     padding-right: 4vw;
     padding-bottom: 2vh;
